# kb-assistant-challenge

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  README_SOLUTION.md  docker-compose.yml  pbcopy  prod-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
kbac/loaders/: __init__.py  matrix_script_loader.py
notebooks/01-loaders/: 01-matrix-script-loader.ipynb
notebooks/02-retriever/: 01-qdrant-retriever.ipynb
notebooks/03-llm-agents/: 01-llm-agents.ipynb
src/: app.py
src/config/: settings.py
src/routers/: agent_router.py
src/schemas/: models.py
src/services/: rag_service.py
src/services/implementations/: matrix_document_loader_service.py  matrix_generator_service.py  qdrant_retriever_service.py
src/services/interfaces/: document_loader_service.py  generator_service.py  retriever_service.py
tests/: conftest.py
tests/integration/: test_part1_queries.py  test_part2_queries.py
tests/unit/: test_qdrant_retriever_service.py  test_rag_service.py
